# worse-genshin-impact

./: Cargo.toml  README.md
assets/configs/: combat_avatar.json
src/: lib.rs
src/avatar/: assets.rs  avatar.rs  mod.rs  predictor.rs  scenes.rs
src/capture/: capturer.rs  mod.rs  portal.rs
src/config/: combat_avatar.rs  fight.rs  fishing.rs  keybindings.rs  mod.rs
src/device/: action.rs  constants.rs  keybindings.rs  keytype.rs  mod.rs  simulator.rs  uinput.rs
src/fight/: command.rs  method.rs  mod.rs  parser.rs  runner.rs  seek.rs  task.rs
src/inference/: grid_icon.rs  mod.rs  model.rs  session.rs
src/inference/ocr/: constants.rs  det.rs  imgproc.rs  mod.rs  rec.rs
src/inference/svtr/: mod.rs  yap.rs
src/inference/yolo/: classifier.rs  decode.rs  letterbox.rs  mod.rs  predictor.rs
src/navigate/: constants.rs  coord.rs  error.rs  mod.rs  scene.rs
src/navigate/action/: context.rs  handlers_basic.rs  handlers_collect.rs  handlers_combat.rs  handlers_common_jobs.rs  handlers_fishing.rs  mod.rs  registry.rs
src/navigate/bv/: assets.rs  hp.rs  matcher.rs  mod.rs  motion.rs  party.rs  revive.rs  skill.rs  status.rs
src/navigate/executor/: hooks.rs  mod.rs  movement.rs  recovery.rs  runner.rs  types.rs  waypoint.rs
src/navigate/locate/: locator.rs  mod.rs  multi_scene.rs
src/navigate/map/: big_map.rs  cache.rs  mod.rs  splits.rs
src/navigate/orient/: camera_fallback.rs  camera_main.rs  character.rs  mod.rs
src/navigate/path/: enums.rs  mod.rs  (+1 more)
src/task/: choose_talk_option.rs  common_jobs.rs  mod.rs  set_time.rs
src/utils/: mod.rs  sort.rs
(+16 files in other folders)
