[package]
name = "worse-genshin-impact"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev-rs = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
tokio = { version = "1", features = ["rt", "time", "macros"] }
enumflags2 = "0.7"
ashpd = { version = "0.13", features = ["screencast"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
