[package]
name = "worse-genshin-impact"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev-rs = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
tokio = { version = "1", features = ["rt", "time", "macros"] }
enumflags2 = "0.7"
ashpd = { version = "0.13", features = ["screencast"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
opencv = { version = "0.98", default-features = false, features = ["clang-runtime", "imgproc", "features2d", "calib3d", "imgcodecs"] }
anyhow = "1"
clipper2 = "0.5"
ndarray = "0.17"
rayon = "1.12"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
